test-cases/negative/test_062_return_outside_function.lay
# negative test: return statement outside function
# expected: parser should reject this or type checker should catch this

return 5


